# -

qtwork/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
qtwork/_probe/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  main.cpp  probe.pro
qtwork/scripts/: Build-Debug.ps1  Run-Debug.ps1  Set-QtEnv.ps1  Verify-Toolchain.ps1
qtwork/src/: main.cpp  mainwindow.cpp  mainwindow.h
qtwork/src/simulation/: carrier_sync_simulator.cpp  carrier_sync_simulator.h
qtwork/src/widgets/: history_plot_widget.cpp  history_plot_widget.h  phase_ring_widget.cpp  phase_ring_widget.h
导航/: analyze_b1c_maincode.py  b1c_maincode.py  b1c_parameters.py  build_b1c_report_docx.py  report_b1c_maincode.md  validate_table52.py  答辩口头文稿_B1C主码.md
导航/.venv_docx/: pyvenv.cfg
导航/output/: b1c_analysis_summary.json  b1c_table5_2_validation.json  b1c_table5_2_validation.md
导航/output/doc/: B1C主码仿真报告.docx  B1C主码仿真报告_整理版.docx  b1c_report_impl_v3.docx  b1c_report_unified_validation.docx  朱铮扬_252080165_第1次作业.docx
导航/output_eval/: b1c_analysis_summary.json
导航/作业2/: README.md  assignment2_report.docx  assignment2_report.md  assignment2_report_formatted.docx  assignment2_report_格式修订版.docx  build_assignment2_docx.py  sequence_assignment2.py  ~$signment2_report_formatted.docx  作业2 序列生成多项式.docx  朱铮扬_252080165_第2次作业.docx
导航/作业2/output/: summary.json
工程伦理/: 通信工程 专硕 朱铮扬 252080165.doc  通信工程 专硕 朱铮扬 252080165.docx  通信工程_专硕_252080165_朱铮扬.docx
工程伦理/output/doc/: 通信工程 专硕 朱铮扬 252080165_按模板.docx  通信工程 专硕 朱铮扬 252080165_按模板_修订.docx  (+1 more)
课题相关通信报告/: generate_uav_comm_report.py
(+4 files in other folders)
